--- a/boot.html
+++ b/boot.html
@@ -1097,6 +1097,7 @@ ds
     var scrollSpy = new bootstrap.ScrollSpy(document.body, {
         target: '#navbar-example'
     });
+    popoverList
 </script>
 
 </html>
